--- a/week6/auth-website/public/index.html
+++ b/week6/auth-website/public/index.html
@@ -5,44 +5,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JWT Authentication</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        h1,
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        input {
+            width: 95%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 16px;
+            margin-bottom: 1rem;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007BFF;
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .message {
+            text-align: center;
+            margin: 10px 0;
+            font-weight: bold;
+            color: #555;
+        }
+
+        #profile {
+            margin-top: 20px;
+        }
+
+        #profile h2 {
+            margin-bottom: 10px;
+        }
+
+        #profile p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>JWT Authentication Demo</h1>
+    <div class="container">
 
-    <!-- Signup Form -->
-    <div id="signup">
-        <h2>Signup</h2>
-        <input type="text" id="signup-username" placeholder="Username" />
-        <input type="password" id="signup-password" placeholder="Password" />
-        <button onclick="signup()">Sign Up</button>
-        <p id="signup-message"></p>
+
+        <h1>JWT Authentication Demo</h1>
+
+        <!-- Signup Form -->
+        <div id="signup">
+            <div>
+                <h2>Signup</h2>
+                <input type="text" id="signup-username" placeholder="Username" />
+                <input type="password" id="signup-password" placeholder="Password" />
+                <button onclick="signup()">Sign Up</button>
+                <p id="signup-message"></p>
+            </div>
+
+            <hr>
+        </div>
+
+        <!-- Signin Form -->
+        <div id="signin">
+            <div>
+                <h2>Signin</h2>
+                <input type="text" id="signin-username" placeholder="Username" />
+                <input type="password" id="signin-password" placeholder="Password" />
+                <button onclick="signin()">Sign In</button>
+                <p id="signin-message"></p>
+            </div>
+
+            <hr>
+        </div>
+
+        <!-- User Profile -->
+        <div id="profile" style="display: none;">
+            <h2>Profile</h2>
+            <p><b>Username:</b> <span id="profile-username"></span></p>
+            <p><b>Password:</b> <span id="profile-password"></span></p>
+            <button onclick="logout()">Logout</button>
+        </div>
     </div>
-
-    <hr>
-
-    <!-- Signin Form -->
-    <div id="signin">
-        <h2>Signin</h2>
-        <input type="text" id="signin-username" placeholder="Username" />
-        <input type="password" id="signin-password" placeholder="Password" />
-        <button onclick="signin()">Sign In</button>
-        <p id="signin-message"></p>
-    </div>
-
-    <hr>
-
-    <!-- User Profile -->
-    <div id="profile" style="display: none;">
-        <h2>Profile</h2>
-        <p><b>Username:</b> <span id="profile-username"></span></p>
-        <p><b>Password:</b> <span id="profile-password"></span></p>
-        <button onclick="logout()">Logout</button>
-    </div>
-
     <script>
         const API_URL = "http://localhost:3000";
-        let token = "";
 
         // Signup Function
         async function signup() {
@@ -77,7 +162,7 @@
             document.getElementById("signin-message").innerText = data.message;
 
             if (data.token) {
-                token = data.token; // Save the token
+                localStorage.setItem("token", data.token); // Save token in browser storage
                 showProfile();
             }
         }
@@ -88,7 +173,7 @@
                 method: "GET",
                 headers: {
                     "Content-Type": "application/json",
-                    "token": token, // Pass the token in the headers
+                    "token": localStorage.getItem("token"), // Pass the token in the headers
                 },
             });
 
@@ -108,7 +193,7 @@
 
         // Logout Function
         function logout() {
-            token = ""; // Clear the token
+            localStorage.removeItem("token"); // Clear the token
             document.getElementById("signin").style.display = "block";
             document.getElementById("signup").style.display = "block";
             document.getElementById("profile").style.display = "none";
